--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body{
     flex-direction: column;
     align-items: center;
     margin: 0, 50, 50, 0;
-    background: url(images/backgroundBar.jpg) fixed;
+    background: url(backgroundBar.jpg) fixed;
     background-position: center;
     background-repeat: no-repeat;
 }
