--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ body{
     flex-direction: column;
     align-items: center;
     margin: 0, 50, 50, 0;
-    background: url(backgroundBar.jpg) fixed;
+    background: url(images/backgroundBar.jpg) fixed;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -98,9 +98,6 @@ legend{
 
     .questionBox{
         border: 5px rgba(0, 0, 0) dotted;
-        width: 78%;
-        height: 95%;
-        margin: 0, 10, 0, 10;
     }
 
     h1,
